# pigsfli

./: .gitattributes  README.md  pimc_commands
Build_VACC/: CTestTestfile.cmake  Makefile
Build_VACC/pimc/: Makefile  cmake_install.cmake  gen_pimc_commands.sh  slurm.sbatch
DerivedData/ModuleCache.noindex/: Session.modulevalidation
DerivedData/pimc/: info.plist
DerivedData/pimc/TextIndex/: TextFragmentIndex-v8.idx
Notebooks/: N1024ScalingExtrapolations.ipynb  N16SweepExtrapolations.ipynb  UtSweep_N16N256.ipynb
Notebooks/.ipynb_checkpoints/: UtSweep_N16N256-checkpoint.ipynb  betaScalingS2-checkpoint.ipynb  betaScalingS2Acc-checkpoint.ipynb  betaScalingVK-checkpoint.ipynb  boundaryLaw_with_jacknife-checkpoint.ipynb
Scripts/.ipynb_checkpoints/: S2_combiner-checkpoint.py  kinetic_energy_combiner-checkpoint.py  phase_diagram_accessible_entanglement_generator-checkpoint.py
build_constant/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_constant/pigsfli/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pigsfli.e  pigsfli.eConfig.cmake
build_conventionals/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_conventionals/pigsfli/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pigsfli.e  pigsfli.eConfig.cmake
build_gutzwiller/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_gutzwiller/pigsfli/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pigsfli.e  pigsfli.eConfig.cmake
build_jastrow/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_jastrow/pigsfli/: CTestTestfile.cmake  Makefile  Untitled.ipynb  cmake_install.cmake  pigsfli.e  pigsfli.eConfig.cmake
build_non-interacting/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_non-interacting/pigsfli/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pigsfli.e  pigsfli.eConfig.cmake
pimc/: .pimc.cpp.swp  .pimc.hpp.swp  Kink.cpp  Kink.hpp  MOTT_pimc.pbs  MOTT_pimc_b1.pbs  MOTT_pimc_b2.pbs  MOTT_pimc_b3.pbs  MOTT_pimc_b4.pbs  Pn.ipynb  README.md  S2_betaScaling.ipynb  SF_pimc.pbs  SF_pimc_b1.pbs  SF_pimc_b2.pbs  SF_pimc_b3.pbs  SF_pimc_b4.pbs  binary_state_histogram.ipynb  entanglement-Copy12.ipynb  entanglement_with_jacknife.ipynb  gen_pimc_commands.sh  main.cpp  out_pimc-0  out_pimc-1  out_pimc-10  out_pimc-100  out_pimc-101  out_pimc-102  out_pimc-103  out_pimc-104  out_pimc-105  out_pimc-106  out_pimc-107  out_pimc-108  out_pimc-109  out_pimc-11  out_pimc-110  out_pimc-111  out_pimc-112  out_pimc-113  (+995 more)
pimc.xcodeproj/: project.pbxproj
pimc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
pimc.xcodeproj/xcshareddata/xcschemes/: pimc.xcscheme
pimc/.ipynb_checkpoints/: Pn-checkpoint.ipynb  S2_betaScaling-checkpoint.ipynb  Untitled-checkpoint.ipynb  acc_entanglement_with_jacknife-checkpoint.ipynb  binary_state_histogram-checkpoint.ipynb  entanglement-Copy12-checkpoint.ipynb  entanglement_with_jacknife-checkpoint.ipynb  subsystem_fock_states_histogram-checkpoint.ipynb
pimc/Build_VACC/: CMakeCache.txt  cmake_install.cmake
pimc/Build_VACC/pimc/: CTestTestfile.cmake  gen_pimc_commands.sh  pigsl.e  pigsl.eConfig.cmake  pimc_commands  slurm.sbatch
pimc/Notebooks/: 3parmBetaScaling.ipynb  3parmBetaScaling_gapPoints.ipynb  FiniteSizeScaling.ipynb  N16SweepExtrapolations.ipynb  N256SweepExtrapolations.ipynb  RunningAverage.ipynb  S2_betaScaling.ipynb  S2accUSweep.ipynb  Untitled.ipynb  UtSweep_N16.ipynb  UtSweep_N16Acc.ipynb  UtSweep_N16N256.ipynb  UtSweep_N256.ipynb  UtSweep_N32.ipynb  acc_entanglement_with_jacknife.ipynb  acc_entanglement_with_jacknife_ver2.ipynb  betaScaling.ipynb  betaScalingE.ipynb  betaScalingK.ipynb  betaScalingS2.ipynb  betaScalingS2Acc.ipynb  betaScalingS2Full.ipynb  betaScalingV.ipynb  betaScalingVK.ipynb  boundaryLaw_with_jacknife.ipynb  entanglement_with_binplot.ipynb  entanglement_with_jacknife.ipynb  phase_diagram_plot.ipynb  test_systematic_error-Copy1.ipynb  test_systematic_error.ipynb
pimc/Notebooks/.ipynb_checkpoints/: 3parmBetaScaling-checkpoint.ipynb  3parmBetaScaling_gapPoints-checkpoint.ipynb  FiniteSizeScaling-checkpoint.ipynb  (+27 more)
pimc/PreliminaryAccessibleEntanglement/: combiner_kind_of.py
pimc/PreliminaryUSweep/: entanglement_with_jacknife.ipynb
pimc/Scripts/: !  accessible_entanglement_combiner.py  entanglement_combiner.py  entanglement_combiner_no_jacknife.py  kinetic_energy_combiner.py  potential_energy_combiner.py
pimc/TRASH/: subsystem_fock_states_histogram.ipynb
pimc/TestPn/: entanglement_with_jacknife.ipynb
src/: CMakeLists.txt
src/cmake/: .gitignore
src/pigsfli/: CMakeLists.txt
src/pigsfli/include/: RNG.h  pimc.hpp
src/pigsfli/src/: RNG.cpp  pimc.cpp
src/pimc/: CMakeLists.txt
src/pimc/include/: RNG.h  pimc.hpp
src/pimc/src/: pimc.cpp
(+2347 files in other folders)
